More cleanups, progressing